@@ -190,8 +190,11 @@ ags_soundcard_editor_init(AgsSoundcardEditor *soundcard_editor)
 				 "alsa\0");
 #endif
   
+#ifdef AGS_WITH_OSS
   gtk_combo_box_text_append_text(soundcard_editor->backend,
 				 "oss\0");
+#endif
+
   gtk_combo_box_set_active(GTK_COMBO_BOX(soundcard_editor->backend),
 			   0);
   
